<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDBDBD">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title"
            android:padding="10dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0068B8"
            android:padding="5dp"
            android:text="@string/gps"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:hapticFeedbackEnabled="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:text="@string/gps_placeholder_alt"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_gps_alt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:text="@string/gps_placeholder_lat"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_gps_lat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:text="@string/gps_placeholder_lng"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_gps_lng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#014D87"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btn_refresh"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#014D87"
            android:text="@string/btn_refresh"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_list"
            style="@style/TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#26AA1C"
            android:text="@string/btn_satellite_list"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_flashlight"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#26AA1C"
            android:onClick="bac"
            android:text="@string/btn_flashlight"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>